# qutim-translations

./: .gitignore  AUTHORS  CC-BY-SA  CMakeLists.txt  COPYING  helper.cpp  make.sh  translations.qbs
.AppleDouble/: .Parent
bg_BG/: Pinfo.xml  aescrypto.ts  aescryptosercive.ts  antiboss.ts  antispam.ts  aspeller.ts  astral.ts  awn.ts  awnplugin.ts  birthdayreminder.ts  chess.ts  clconf.ts  connectioncheck.ts  connectionmanager.ts  core.ts  dbusapi.ts  dbusnotifications.ts  emoedit.ts  floaties.ts  fmtune.ts  formules.ts  gpgcrypt.ts  growlnotification.ts  histman.ts  hunspeller.ts  icq.ts  imagepub.ts  indicator.ts  irc.ts  jabber.ts  juick.ts  kde-integration.ts  kdeintegration.ts  kineticpopups.ts  libnotify.ts  logger.ts  mac-integration.ts  macintegration.ts  massmessaging.ts  meegointegration.ts  (+38 more)
cs_CZ/: Pinfo.xml  aescrypto.ts  antiboss.ts  antispam.ts  aspeller.ts  awn.ts  chess.ts  clconf.ts  coder.ts  connectioncheck.ts  connectionmanager.ts  core.ts  dbusapi.ts  dbusnotifications.ts  emoedit.ts  floaties.ts  fmtune.ts  formules.ts  gpgcrypt.ts  growlnotification.ts  histman.ts  icq.ts  imagepub.ts  indicator.ts  irc.ts  jabber.ts  jsonhistory.ts  juick.ts  kde-integration.ts  kdeintegration.ts  kineticpopups-ng.ts  kineticpopups.ts  libnotify.ts  logger.ts  mac-integration.ts  macintegration.ts  massmessaging.ts  mobility.ts  mrim.ts  msn.ts  (+28 more)
de_DE/: Pinfo.xml  aescrypto.ts  antiboss.ts  antispam.ts  aspeller.ts  astral.ts  awn.ts  chess.ts  clconf.ts  connectioncheck.ts  connectionmanager.ts  core.ts  dbusapi.ts  dbusnotifications.ts  emoedit.ts  floaties.ts  fmtune.ts  formules.ts  gpgcrypt.ts  growlnotification.ts  histman.ts  icq.ts  imagepub.ts  indicator.ts  irc.ts  jabber.ts  jsonhistory.ts  kde_integration.ts  kdeintegration.ts  kineticpopups.ts  logger.ts  macintegration.ts  massmessaging.ts  mobility.ts  mrim.ts  msn.ts  nowlistening.ts  nowplaying.ts  olddelegate.ts  oscar.ts  (+22 more)
modules/adiumwebview/: adiumwebview.pot  ar.po  be.po  bg.po  cv.po  de.po  en_GB.po  es.po  fr.po  he.po  nds.po  ru.po  sk.po  uk.po  zh_CN.po
modules/aescrypto/: aescrypto.pot  ar.po  be.po  bg.po  cs.po  de.po  en_GB.po  es.po  he.po  ru.po  ru.ts  uk.po  uz.po
modules/antiboss/: antiboss.pot  ar.po  be.po  bg.po  cs.po  cs.ts  de.po  en_GB.po  es.po  fr.po  he.po  ru.po  ru.ts  uk.po  uz.po
modules/antispam/: antispam.pot  ar.po  be.po  bg.po  bg.ts  cs.po  cs.ts  de.po  de.ts  en_GB.po  es.po  he.po  ru.po  ru.ts  uk.po
modules/aspeller/: ar.po  aspeller.pot  be.po  bg.po  bg.ts  cs.po  de.po  en_GB.po  es.po  he.po  ru.po  uk.po
modules/astral/: ar.po  astral.pot  be.po  bg.po  bg.ts  cs.po  cs.ts  de.po  de.ts  en_GB.po  es.po  fr.po  he.po  ru.po  uk.po  uz.po
modules/autoreply/: autoreply.pot  be.po  bg.po  de.po  en_GB.po  es.po  he.po  ru.po  uk.po
modules/awn/: ar.po  awn.pot  be.po  bg.po  bg.ts  cs.po  cs.ts  de.po  de.ts  en_GB.po  es.po  he.po  ru.po  uk.po
modules/birthdayreminder/: ar.po  be.po  bg.po  birthdayreminder.pot  de.po  de.ts  en_GB.po  es.po  he.po  ru.po  sk.po  uk.po
modules/blogimprover/: be.po  bg.po  blogimprover.pot  de.po  en_GB.po  es.po  he.po  ru.po  uk.po  uz.po
modules/clconf/: ar.po  be.po  bg.po  bg.ts  clconf.pot  cs.po  cs.ts  de.po  de.ts  en_GB.po  es.po  he.po  ru.po  ru.ts  sk.po  uk.po  uz.po
modules/connectionmanager/: bg.ts  cs.ts
modules/control/: be.po  bg.po  control.pot  de.po  en_GB.po  he.po  ru.po  sk.po  uk.po
modules/core/: be.po  bg.po  core.pot  cs.po  cv.po  de.po  de.ts  en_GB.po  es.po  fr.po  he.po  kk.po  ru.po  sk.po  uk.po
modules/dbusapi/: be.po  bg.po  bg.ts  cs.po  cs.ts  dbusapi.pot  de.po  de.ts  en_GB.po  es.po  he.po  ru.po  sk.po  uk.po  uz.po
modules/dbusnotifications/: be.po  bg.po  cs.po  cs.ts  dbusnotifications.pot  de.po  en_GB.po  es.po  he.po  ru.po  ru.ts  sk.po  uk.po  uz.po
modules/devels/: be.po  bg.po  de.po  devels.pot  devels.ts  en_GB.po  es.po  he.po  ru.po  sk.po  uk.po
modules/docktile/: be.po  bg.po  de.po  docktile.pot  en_GB.po  es.po  he.po  ru.po  uk.po
modules/emoedit/: be.po  bg.po  cs.po  de.po  de.ts  emoedit.pot  en_GB.po  es.po  he.po  ru.po  ru.ts  sk.po  uk.po  uz.po
modules/floaties/: be.po  bg.po  cs.po  cs.ts  de.po  de.ts  en_GB.po  es.po  floaties.pot  he.po  ru.po  ru.ts  uk.po  uz.po
modules/formula/: be.po  bg.po  de.po  en_GB.po  es.po  he.po  (+6 more)
phrasebooks/: bulgarian.qph  russian.qph
ru_RU/: Pinfo.xml  aescrypto.ts  aescryptosercive.ts  antiboss.ts  antispam.ts  aspeller.ts  astral.ts  awn.ts  awnplugin.ts  birthdayreminder.ts  chess.ts  clconf.ts  connectioncheck.ts  connectionmanager.ts  core-s60.ts  core.ts  dbusapi.ts  dbusnotifications.ts  emoedit.ts  floaties.ts  fmtune.ts  formules.ts  growlnotification.ts  histman.ts  hunspeller.ts  icq.ts  imagepub.ts  indicator.ts  irc.ts  jabber.ts  juick.ts  kde-integration.ts  kdeintegration.ts  kineticpopups-ng.ts  kineticpopups.ts  libnotify.ts  localization.ts  logger.ts  mac-integration.ts  macintegration.ts  (+42 more)
uk_UA/: core.ts  icq.ts  irc.ts  jabber.ts  mrim.ts  plugman.ts  vkontakte.ts
(+462 files in other folders)
