cmake_minimum_required (VERSION 2.6 FATAL_ERROR)

project( translations )

#include(MacroAddQutIMArtwork)
#find_package( QutIM REQUIRED )

file( GLOB LANGUAGES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/*/*.ts" )
set(LANG_DIR "${CMAKE_CURRENT_BINARY_DIR}/languages")
file( MAKE_DIRECTORY ${LANG_DIR} )

foreach( LANGUAGE ${LANGUAGES} )
	string(REPLACE ".ts" "" LANGUAGE_NAME ${LANGUAGE})
	string(REGEX REPLACE "/*\\\\*[a-zA-Z0-9_-]+\\.ts" "" LANGUAGE_DIRECTORY_NAME ${LANGUAGE})
	file(MAKE_DIRECTORY "${LANG_DIR}/${LANGUAGE_DIRECTORY_NAME}")

	set(TS ${CMAKE_CURRENT_SOURCE_DIR}/${LANGUAGE})
	set(QM ${LANG_DIR}/${LANGUAGE_NAME}.qm)
	set(TRANSLATIONS ${TRANSLATIONS} ${TS})
	set(TRANSLATIONS_BINARY ${TRANSLATIONS_BINARY} ${QM})
	ADD_CUSTOM_COMMAND(
		OUTPUT    ${QM}
		DEPENDS   ${TS}
		COMMAND   ${QT_LRELEASE_EXECUTABLE}
		ARGS      -silent "${CMAKE_CURRENT_SOURCE_DIR}/${LANGUAGE}" -qm ${QM}
	)
endforeach( LANGUAGE )

ADD_CUSTOM_TARGET(translations ALL echo
  DEPENDS ${TRANSLATIONS_BINARY}
  )

QUTIM_ADD_ARTWORK(${LANG_DIR})
