cmake_minimum_required (VERSION 2.6 FATAL_ERROR)

project(translations)

if(${CMAKE_CURRENT_SOURCE_DIR} STREQUAL ${CMAKE_SOURCE_DIR} )
        set(QUTIM_PATH "" CACHE FILEPATH "Path to qutim sources")
        set(QUTIM_BINARY_DIR "" CACHE FILEPATH "Path to qutim build directory")
        set(QUTIM_LIBRARY QUTIM_LIBRARY-NOTFOUND CACHE FILEPATH "Path to qutim library")
endif ( ${CMAKE_CURRENT_SOURCE_DIR} STREQUAL ${CMAKE_SOURCE_DIR} )
if( QUTIM_BINARY_DIR )
        set( QUTIM_INCLUDE_DIR ${QUTIM_BINARY_DIR}/libqutim/include )
        set( QUTIM_LIBRARY_DIR ${QUTIM_BINARY_DIR}/libqutim/ )
endif( QUTIM_BINARY_DIR )

LIST(APPEND CMAKE_MODULE_PATH "cmake")
LIST(APPEND CMAKE_MODULE_PATH "${QUTIM_PATH}/cmake")

include(MacroEnsureVersion)
include(QutIMMacros)
find_package(QutIM REQUIRED)

file(GLOB LANGUAGES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/*/*.ts" )
set(LANG_DIR "${CMAKE_CURRENT_BINARY_DIR}/languages")
file(MAKE_DIRECTORY ${LANG_DIR} )

ADD_CUSTOM_TARGET(translations ALL echo
  DEPENDS ${TRANSLATIONS_BINARY}
  )

foreach(LANGUAGE ${LANGUAGES} )
	string(REPLACE ".ts" "" LANGUAGE_NAME ${LANGUAGE})
	string(REGEX REPLACE "/*\\\\*[a-zA-Z0-9_-]+\\.ts" "" LANGUAGE_DIRECTORY_NAME ${LANGUAGE})
	file(MAKE_DIRECTORY "${LANG_DIR}/${LANGUAGE_DIRECTORY_NAME}")

	set(TS ${CMAKE_CURRENT_SOURCE_DIR}/${LANGUAGE})
	set(QM ${LANG_DIR}/${LANGUAGE_NAME}.qm)
	set(TRANSLATIONS ${TRANSLATIONS} ${TS})
	ADD_CUSTOM_COMMAND(
		TARGET    translations
		DEPENDS   ${TS}
		COMMAND   ${QT_LRELEASE_EXECUTABLE}
		ARGS      -silent "${CMAKE_CURRENT_SOURCE_DIR}/${LANGUAGE}" -qm ${QM}
	)
	set(TRANSLATIONS_BINARY ${TRANSLATIONS_BINARY} ${QM})
endforeach(LANGUAGE)

QUTIM_ADD_ARTWORK(${LANG_DIR})
